# wirED

./: CMakeLists.txt  README.md  package.xml
include/: bounded_buffer_old.h  featureProperties_info.h  multiple_hypothesis_plugin.h  wiredData.h
launch/: model-example-wirED.yaml  test.launch
src/: multiple_hypothesis_plugin.cpp
