<?xml version="1.0"?>

<package>
  <name>wired</name>
  <version>0.0.0</version>
  <description>The mulitple hypothesis plugin implementation of ED</description>

  <maintainer email="w.houtman@tue.nl">Wouter Houtman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>wire_core</build_depend>
  <build_depend>wire_msgs</build_depend>
  <build_depend>wire_state_estimators</build_depend>
 <build_depend>wire_features_lib</build_depend>
  
  <run_depend>ed</run_depend>
  <run_depend>wire_core</run_depend>
  <run_depend>wire_msgs</run_depend>
  <run_depend>wire_state_estimators</run_depend>
 <run_depend>wire_features_lib</run_depend>
  
</package>
